# qft

./: .gitignore  main.hs  qft.cabal
exe/: main.hs  qft2.hs  qft4.hs  qft5.hs
lib/: Diagram.hs  Graph.hs  McKay.hs  OldTopology.hs  Permute.hs  Tensor.hs  Topology.hs  Util.hs
lib/Data/: EnumeratedSeqZipper.hs  EnumeratedSequence.hs  Fin1.hs  Partition.hs  PeanoNat.hs  Permute.hs  SeqZipper.hs  Within.hs
lib/Data/Enumerated/: Partition.hs  SeqZipper.hs  Sequence.hs
lib/OldTopology/: PrettyPrint.hs
lib/Topology/: Generate.hs  PrettyPrint.hs
old/: qft.cabal
old/doc/: layoutalgo.tex
old/exe/: qft1.hs  qft2.hs  qft3.hs  qft4.hs
old/lib/: Diagram.hs  Tensor.hs  Util.hs
old/lib/Data/: Fin1.hs  FromTuple.hs  Partition.hs
old/lib/Data/Enumerated/: Partition.hs  SeqZipper.hs  Sequence.hs
