name:                qft
version:             0.0
synopsis:            Quantum Field Theory
description:         Collection of Quantum Field Theory algorithms
homepage:            http://github.com/wavewave/qft
license:             GPL-3
license-file:        LICENSE
author:              Ian-Woo Kim
maintainer:          ianwookim@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.8

executable qft1
  main-is:             qft1.hs
  hs-source-dirs:      exe
  ghc-options: 	-Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  build-depends:       base == 4.* ,
                       qft

executable qft2
   main-is:             qft2.hs
   hs-source-dirs:      exe
   ghc-options: 	-Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
   ghc-prof-options: -caf-all -auto-all
   build-depends:   base == 4.*,
                    containers,
                    filepath,
                    process,
                    unordered-containers,
                    qft

-- executable qft3
--   main-is:             qft3.hs
--   hs-source-dirs:      exe
--   ghc-options: 	-Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
--   ghc-prof-options: -caf-all -auto-all
--   build-depends:       base == 4.*,
--                        array,
--                        filepath,
--                        hgal,
--                        qft


executable qft4
  main-is:             qft4.hs
  hs-source-dirs:      exe
  ghc-options: 	-Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  build-depends:   base == 4.*,
                   array,
                   containers,
                   filepath,
                   hashable,
                   hgal,
                   process,
                   unordered-containers,
                   qft

executable qft5
  main-is:             qft5.hs
  hs-source-dirs:      exe
  ghc-options: 	-Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  build-depends:   base == 4.*,
                   array,
                   either,
                   transformers,
                   qft


Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -Werror -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base == 4.*,
                   array,
                   containers,
                   either,
                   filepath,
                   hashable,
                   mtl,
                   process,
                   singletons,
                   transformers,
                   unordered-containers
  Exposed-Modules: 
                   Data.Enumerated.Partition
                   Data.Enumerated.Sequence
                   Data.Enumerated.SeqZipper
                   Data.Fin1
                   Data.Partition
                   Data.PeanoNat
                   Data.Permute
                   Data.SeqZipper
                   Diagram
                   Graph
                   McKay
                   Tensor
                   Topology.Generate
                   Topology.PrettyPrint
                   Util
  Other-Modules: 

